add unsuccess class status
